--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,3 +1,8 @@
+@media screen and (max-width: 765px){
+  .b-pink, .b-blue, .b-yellow, .b-green{
+    background-color: transparent;
+  }
+}
 @media screen and (min-width: 765px) {
   /* navbar top */
   .menu-toggle {
